#20 sign up newsletter added

--- a/index.html
+++ b/index.html
@@ -68,16 +68,45 @@
             <span class="text-primary">Jaoude</span>
           </h1>
           <div class="subheading mb-5">London, UK · Porto, Portugal · Thailand</div>
+
+          <!-- Begin Mailchimp Signup Form -->
+          <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+            #mc_embed_signup {
+              background: #fff;
+              clear: left;
+              font: 14px Helvetica, Arial, sans-serif;
+              width: 100%;
+            }
+
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+          	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+          </style>
+          <div id="mc_embed_signup">
+            <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
+              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+              novalidate>
+              <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL">Subscribe to our mailing list</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
+                    tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
+
           <p class="lead mb-5">
             Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
           </p>
 
           <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>.</p>
-
           <p class="lead mb-5">Subscribe to my channel if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
-
           <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
-          </p>
+
           <div class="social-icons">
             <a href="https://www.youtube.com/eddiejaoude" target="_blank">
                 <i class="fab fa-youtube"></i>
