#26 improved bio with link for youtube channel

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </p>
 
           <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>, open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what version is on what stage and build/deployment durations. your virtual release assistant.</p>
-          <p class="lead mb-5">Subscribe to my channel if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
+          <p class="lead mb-5">Subscribe to my <a href="https://www.youtube.com/eddiejaoude" target="_blank">YouTube channel</a> if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
           <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
 
           <div class="social-icons">
