feat(footer): strapline in bio

--- a/index.html
+++ b/index.html
@@ -273,42 +273,44 @@
       </div>
 
       <div
-        class="flex flex-col bg-blue-900 p-6 md:flex-row border-indigo-300 border-t-2 md:sticky bottom-0"
+        class="flex flex-col bg-blue-900 p-6 md:flex-row border-indigo-300 border-t-2 md:sticky bottom-0 text-white"
       >
         <a
           href="#"
-          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
         >
           <i class="fab fa-youtube-square"></i>
           YouTube</a
         >
         <a
           href="#"
-          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
         >
           <i class="fab fa-twitter-square"></i>
           Twitter</a
         >
         <a
           href="#"
-          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
         >
           <i class="fab fa-linkedin"></i>
           LinkedIn</a
         >
         <a
           href="#"
-          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
         >
           <i class="fab fa-github-square"></i>
           GitHub</a
         >
         <a
           href="#"
-          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+          class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
         >
           <i class="fab fa-discord"></i>Discord</a
         >
+
+        <p class="self-center text-gray-600">OPEN SOURCE is NOT about code, it is about people and collaboration</p>
       </div>
     </div>
   </body>
