feat(pills): improved pills spacing

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             </div>
             <div class="px-6 py-4 flex flex-wrap">
               <span
-                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#photography</span
               >
               <span
-                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700  mb-2 mr-2"
                 >#travel</span
               >
               <span
-                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+                class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#winter</span
               >
             </div>
@@ -86,17 +86,17 @@
                 exercitationem praesentium nihil.
               </p>
             </div>
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 flex flex-wrap">
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#photography</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#travel</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#winter</span
               >
             </div>
@@ -116,17 +116,17 @@
                 exercitationem praesentium nihil.
               </p>
             </div>
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 flex flex-wrap">
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#photography</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#travel</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#winter</span
               >
             </div>
@@ -146,17 +146,17 @@
                 exercitationem praesentium nihil.
               </p>
             </div>
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 flex flex-wrap">
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#photography</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#travel</span
               >
               <span
-                class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+              class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mb-2 mr-2"
                 >#winter</span
               >
             </div>
@@ -273,7 +273,7 @@
       </div>
 
       <div
-        class="flex flex-col bg-blue-900 p-6 md:flex-row border-indigo-300 border-t-2 md:sticky bottom-0 text-white"
+        class="flex flex-col bg-blue-900 px-4 py-2 md:flex-row border-indigo-100 border-t-2 md:sticky bottom-0 text-white"
       >
         <a
           href="#"
@@ -310,7 +310,7 @@
           <i class="fab fa-discord"></i>Discord</a
         >
 
-        <p class="self-center text-gray-600">OPEN SOURCE is NOT about code, it is about people and collaboration</p>
+        <p class="self-center text-gray-500">OPEN SOURCE is NOT about code, it is about people and collaboration</p>
       </div>
     </div>
   </body>
