--- a/index.html
+++ b/index.html
@@ -11,23 +11,43 @@
 
 <body class="bg-gray-800">
   <div class="flex flex-col h-screen">
-    <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
-      <span class="text-white text-2xl">Eddie Jaoude</span>
+    <nav class="flex items-center justify-between flex-wrap p-6">
+      <div>
+        <h1 class="text-white text-2xl">Eddie Jaoude</h1>
+        <h2 class="text-gray-400">OPEN SOURCE is NOT about code, it is about people and collaboration</h2>
+      </div>
       <div>
         <a href="#"
           class="inline-block text-sm px-4 mx-2 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white">
           <i class="fab fa-github-square"></i>
-          GitHub</a>
+          Videos
+        </a>
+        <a href="#"
+          class="inline-block text-sm px-4 mx-2 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white">
+          <i class="fab fa-github-square"></i>
+          Testimonials
+        </a>
+        <a href="#"
+          class="inline-block text-sm px-4 mx-2 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white">
+          <i class="fab fa-github-square"></i>
+          Projects
+        </a>
+        <a href="#"
+          class="inline-block text-sm px-4 mx-2 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white">
+          <i class="fab fa-github-square"></i>
+          GitHub
+        </a>
       </div>
     </nav>
 
     <img src="https://user-images.githubusercontent.com/624760/87259350-a0381f00-c4a2-11ea-9782-69e4d06d423f.png" />
 
     <div class="container mx-auto flex-1">
-      <div class="rounded-lg my-6 p-4 bg-white">
-        <h2 class="text-2xl text-center text-blue-900">
-          OPEN SOURCE is NOT about code, it is about people and collaboration
-        </h2>
+
+      <div class="my-6 p-3 border-l-8">
+        <h3 class="text-2xl text-gray-400">
+          Featured YouTube videos
+        </h3>
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 my-6">
@@ -120,7 +140,13 @@
         </div>
       </div>
 
-      <div class="border-l-8 border-white mb-4 p-6">
+      <div class="my-6 p-3 border-l-8">
+        <h3 class="text-2xl text-gray-400">
+          Feature testimonials
+        </h3>
+      </div>
+
+      <div class="mb-4 p-6 bg-gray-900 rounded-lg">
         <div class="text-white text-xl">
           <i class="fas fa-quote-left text-gray-300 text-xl"></i>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
@@ -139,7 +165,7 @@
         </div>
       </div>
 
-      <div class="border-r-8 border-white mb-4 p-6">
+      <div class="mb-4 p-6">
         <div class="text-white text-xl">
           <i class="fas fa-quote-left text-gray-300 text-xl"></i>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
@@ -156,6 +182,31 @@
             <p class="text-gray-200">From company X</p>
           </div>
         </div>
+      </div>
+
+      <div class="mb-4 p-6 bg-gray-900 rounded-lg">
+        <div class="text-white text-xl">
+          <i class="fas fa-quote-left text-gray-300 text-xl"></i>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+          sit amet elit vitae dui ullamcorper interdum vel nec nunc.
+          Pellentesque fringilla congue tortor. Donec auctor accumsan
+          hendrerit. Morbi malesuada sodales auctor
+          <i class="fas fa-quote-right text-grey-300"></i>
+        </div>
+        <div class="flex items-center mt-4">
+          <img class="w-10 h-10 rounded-full mr-4" src="http://eddiejaoude.github.io/img/profile.jpg"
+            alt="Avatar of Jonathan Reinink" />
+          <div class="text-sm">
+            <p class="text-white leading-none">Jonathan Reinink</p>
+            <p class="text-gray-200">From company X</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="my-6 p-3 border-l-8">
+        <h3 class="text-2xl text-gray-400">
+          Featured open source projects
+        </h3>
       </div>
 
       <div class="bg-white flex flex-col md:flex-row rounded my-6">
@@ -216,7 +267,7 @@
     </div>
 
     <div
-      class="flex flex-col bg-blue-900 px-4 py-2 md:flex-row border-indigo-100 border-t-2 md:sticky bottom-0 text-white">
+      class="flex flex-col bg-blue-900 px-4 py-2 md:flex-row border-gray-500 border-t-2 md:sticky bottom-0 text-white">
       <a href="#"
         class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded border-white hover:border-transparent hover:text-teal-500 hover:bg-white">
         <i class="fab fa-youtube-square"></i>
