--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
             <a href="https://linkedin.com/in/eddiejaoude" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
+            <a href="https://dev.to/eddiejaoude" target="_blank">
+              <i class="fab fa-dev"></i>
+            </a>
           </div>
         </div>
       </section>
