--- a/index.html
+++ b/index.html
@@ -1,40 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Eddie Jaoude:: Senior Open Source Developer</title>
+  <title>Eddie Jaoude:: Senior Open Source Developer</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-<!--     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <!--     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
 
-    <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/aead5e1701.js" crossorigin="anonymous"></script>
-  </head>
+  <script src="https://kit.fontawesome.com/aead5e1701.js" crossorigin="anonymous"></script>
 
-  <body id="page-top">
+  <!-- Begin Mailchimp Signup Form -->
+  <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    #mc_embed_signup {
+      background: #fff;
+      clear: left;
+      font: 14px Helvetica, Arial, sans-serif;
+      width: 50%;
+      margin: auto;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+        0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      border: 1px solid #dfe1e5;
+    }
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Eddie Jaoude</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="Eddie Jaoude:: Senior Open Source Developer">
-        </span>
-      </a>
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    #mc-embedded-subscribe {
+      background-color: #bd5d38 !important;
+    }
+
+    #mc_embed_signup input.email {
+      border-radius: 6px;
+      padding-left: 10px;
+      border: 2px solid #dfe1e5;
+    }
+
+    #mc_embed_signup input.email:hover {
+      border: 2px solid #bd5d38;
+    }
+
+    .model_mc_embed_signup {
+      width: 100% !important;
+      margin-bottom: 0 !important;
+      -webkit-box-shadow: none !important;
+      -moz-box-shadow: none !important;
+      box-shadow: none !important;
+      border: none !important;
+    }
+
+    /* Responsive layout */
+    @media (max-width: 800px) {
+      #mc_embed_signup {
+        width: 100%;
+      }
+
+      #mc_embed_signup input.email,
+      #mc-embedded-subscribe {
+        width: 92% !important;
+        margin: 10px 0;
+      }
+    }
+  </style>
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Eddie Jaoude</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg"
+          alt="Eddie Jaoude:: Senior Open Source Developer">
+      </span>
+    </a>
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -59,75 +112,73 @@
           </li>
         </ul>
       </div> -->
-    </nav>
+  </nav>
 
-    <div class="container-fluid p-0">
+  <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0">Eddie
-            <span class="text-primary">Jaoude</span>
-          </h1>
-          <div class="subheading mb-5">London, UK · Porto, Portugal · Thailand</div>
-
-          <!-- Begin Mailchimp Signup Form -->
-          <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-          <style type="text/css">
-            #mc_embed_signup {
-              background: #fff;
-              clear: left;
-              font: 14px Helvetica, Arial, sans-serif;
-              width: 100%;
-            }
-
-            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-          	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-          </style>
-          <div id="mc_embed_signup">
-            <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
-              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-              novalidate>
-              <div id="mc_embed_signup_scroll">
-                <label for="mce-EMAIL">Subscribe to my mailing list & get a FREE ebook with 30 Open Source tips</label>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
-                    tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-              </div>
-            </form>
-          </div>
-
-          <!--End mc_embed_signup-->
-
-          <p class="lead mb-5">
-            Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
-          </p>
-
-          <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>, open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what version is on what stage and build/deployment durations. your virtual release assistant.</p>
-          <p class="lead mb-5">Subscribe to my <a href="https://www.youtube.com/eddiejaoude" target="_blank">YouTube channel</a> if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
-          <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
-
-          <div class="social-icons">
-            <a href="https://www.youtube.com/eddiejaoude" target="_blank">
-                <i class="fab fa-youtube"></i>
-              </a>
-            <a href="https://github.com/eddiejaoude" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="https://twitter.com/eddiejaoude" target="_blank">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://linkedin.com/in/eddiejaoude" target="_blank">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://dev.to/eddiejaoude" target="_blank">
-              <i class="fab fa-dev"></i>
-            </a>
-          </div>
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <div class="my-auto">
+        <h1 class="mb-0">Eddie
+          <span class="text-primary">Jaoude</span>
+        </h1>
+        <div class="subheading mb-5">London, UK · Porto, Portugal · Thailand</div>
+        <div id="mc_embed_signup">
+          <form
+            action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <label for="mce-EMAIL">Subscribe to my mailing list & get a FREE ebook with 30 Open Source tips</label>
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address"
+                required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                  name="b_0f390eebc68ad563bffc5926a_822dee9e0e" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                  class="button"></div>
+            </div>
+          </form>
         </div>
-      </section>
-<!--
+
+        <!--End mc_embed_signup-->
+
+        <p class="lead mb-5">
+          Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on
+          GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the
+          world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
+        </p>
+
+        <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>,
+          open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team
+          is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what
+          version is on what stage and build/deployment durations. your virtual release assistant.</p>
+        <p class="lead mb-5">Subscribe to my <a href="https://www.youtube.com/eddiejaoude" target="_blank">YouTube
+            channel</a> if you want to get into coding or take your coding to the next level or you are already coding
+          and want to join the open source community and hackathon events. I will share the events I go to and teach you
+          best practices in software engineering and coding industry.</p>
+        <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)
+        </p>
+
+        <div class="social-icons">
+          <a href="https://www.youtube.com/eddiejaoude" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://github.com/eddiejaoude" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://twitter.com/eddiejaoude" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://linkedin.com/in/eddiejaoude" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://dev.to/eddiejaoude" target="_blank">
+            <i class="fab fa-dev"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!--
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
@@ -324,70 +375,61 @@
         </div>
       </section> -->
 
-    </div>
+  </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="subscriptionModal" tabindex="-1" role="dialog" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="subscriptionModalLabel">FREE ebook with 30 Open Source tips</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+  <!-- Modal -->
+  <div class="modal fade" id="subscriptionModal" tabindex="-1" role="dialog" aria-labelledby="subscriptionModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="subscriptionModalLabel">FREE ebook with 30 Open Source tips</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="mc_embed_signup" class="model_mc_embed_signup">
+            <form
+              action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
+              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+              target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address"
+                  required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                    name="b_0f390eebc68ad563bffc5926a_822dee9e0e" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                    class="button"></div>
+              </div>
+            </form>
           </div>
-          <div class="modal-body">
-            <!-- Begin Mailchimp Signup Form -->
-            <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-              #mc_embed_signup {
-                background: #fff;
-                clear: left;
-                font: 14px Helvetica, Arial, sans-serif;
-                width: 100%;
-              }
-
-              /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
-            <div id="mc_embed_signup">
-              <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-                novalidate>
-                <div id="mc_embed_signup_scroll">
-                  <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
-                      tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                </div>
-              </form>
-            </div>
-            <!--End mc_embed_signup-->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
+          <!--End mc_embed_signup-->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
 
-    <script>
-      setTimeout(function () {
-        $('#subscriptionModal').modal();
-      }, 3000);
-    </script>
-  </body>
+  <script>
+    setTimeout(function () {
+      $('#subscriptionModal').modal();
+    }, 3000);
+  </script>
+</body>
 
 </html>
