--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     #mc_embed_signup {
       background: #fff;
       clear: left;
-      font: 14px Helvetica, Arial, sans-serif;
-      width: 50%;
-      margin: auto;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-        0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      font: 16px Helvetica, Arial, sans-serif;
       border: 1px solid #dfe1e5;
     }
 
@@ -43,35 +38,11 @@
     }
 
     #mc_embed_signup input.email {
-      border-radius: 6px;
-      padding-left: 10px;
       border: 2px solid #dfe1e5;
     }
 
     #mc_embed_signup input.email:hover {
       border: 2px solid #bd5d38;
-    }
-
-    .modal_mc_embed_signup {
-      width: 100% !important;
-      margin-bottom: 0 !important;
-      -webkit-box-shadow: none !important;
-      -moz-box-shadow: none !important;
-      box-shadow: none !important;
-      border: none !important;
-    }
-
-    /* Responsive layout */
-    @media (max-width: 800px) {
-      #mc_embed_signup {
-        width: 100%;
-      }
-
-      #mc_embed_signup input.email,
-      #mc-embedded-subscribe {
-        width: 92% !important;
-        margin: 10px 0;
-      }
     }
   </style>
   </head>
@@ -123,13 +94,13 @@
 
           <!-- Begin Mailchimp Signup Form -->
           </style>
-          <div id="mc_embed_signup">
+          <div id="mc_embed_signup" class="col-lg-6 col-sm-6 col-xs-12 shadow rounded mx-auto mb-3">
             <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
               novalidate>
-              <div id="mc_embed_signup_scroll">
+              <div id="mc_embed_signup_scroll text-justify">
                 <label for="mce-EMAIL">Subscribe to my mailing list & get a FREE ebook with 30 Open Source tips</label>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <input type="email" value="" name="EMAIL" class="email col-md-12 mb-2 rounded" id="mce-EMAIL" placeholder="Email Address" required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
                     tabindex="-1" value=""></div>
@@ -139,15 +110,16 @@
           </div>
 
           <!--End mc_embed_signup-->
-
-          <p class="lead mb-5">
+          <div class="content text-justify col-lg-10 col-sm-10">
+            <p class="lead mb-5 ">
             Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
           </p>
-
           <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>, open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what version is on what stage and build/deployment durations. your virtual release assistant.</p>
           <p class="lead mb-5">Subscribe to my <a href="https://www.youtube.com/eddiejaoude" target="_blank">YouTube channel</a> if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
           <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
 
+          </div>
+          
           <div class="social-icons">
             <a href="https://www.youtube.com/eddiejaoude" target="_blank">
                 <i class="fab fa-youtube"></i>
@@ -359,13 +331,13 @@
           <div class="modal-body">
             <!-- Begin Mailchimp Signup Form -->
             </style>
-            <div id="mc_embed_signup" class="modal_mc_embed_signup">
+            <div id="mc_embed_signup" class="border-0">
               <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
                 novalidate>
                 <div id="mc_embed_signup_scroll">
                   <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <input type="email" value="" name="EMAIL" class="email rounded" id="mce-EMAIL" placeholder="Email Address" required>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
                       tabindex="-1" value=""></div>
