--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
   <head>
+    <script>
+      window.location.replace("http://eddiejaoude.io");
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
